[project]
name = "neuronpedia-mcp-python"
version = "0.1.0"
description = "Model Context Protocol server for Neuronpedia API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.13.0",
    "pydantic>=2.11.7",
]

[project.scripts]
neuronpedia-mcp = "neuronpedia_mcp.server:main"
